fixed alignment for login and notification buttons on user profile page

--- a/public/style.css
+++ b/public/style.css
@@ -738,7 +738,7 @@ a {
 }
 #WeatherContainer {
   position: absolute;
-  right: 230px;
+  right: 100px;
   top: 100px;
   z-index: -1;
   animation-delay: 3s;
@@ -868,7 +868,7 @@ a {
 @media only screen and (max-width: 700px) {
   #WeatherContainer {
     position: absolute;
-    right: 90px;
+    right: 50px;
     top: 70px;
     z-index: -1;
     animation-delay: 3s;
